<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="421dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/issue_hint"
            android:inputType="number"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publish_year_hint"
            android:inputType="number"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pages_hint"
            android:inputType="number"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purchase_date_hint"
            android:inputType="text"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/colorLight" />


        <Button
            android:id="@+id/button_delete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorRed"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/colorLight" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>